Added new files

--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-md-4">
                     <button class="btn btn-primary btn-lg btn-block">
-                        <i class="fas fa-envelope-open-o"></i> Subscribe    
+                        <i class="fas fa-envelope"></i> Subscribe    
                     </button>
                 </div>
             </div>
